--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,23 @@
+# This first block redirects http://felitech.site to https://felitech.site
 server {
     listen 80;
+    server_name felitech.site;
+    return 301 https://$host$request_uri;
+}
+
+# This is your main server block, now configured for SSL
+server {
+    listen 443 ssl http2; # Listen on port 443 for HTTPS
     index index.php index.html;
-    server_name localhost;
+    server_name felitech.site;
+
+    # SSL certificate paths (provided by Certbot)
+    ssl_certificate /etc/letsencrypt/live/felitech.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/felitech.site/privkey.pem;
 
     root /var/www/public;
 
+    # ... the rest of your configuration (location blocks) remains the same ...
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
@@ -14,10 +27,5 @@ server {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-
-    location ~ /\.ht {
-        deny all;
     }
 }
