Search & Meals CRUD

--- a/.env.example
+++ b/.env.example
@@ -64,7 +64,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-# Google OAuth
-GOOGLE_CLIENT_ID=687127819051-iidjd1ihv48nokk5u5it7pvj4p6ehh2g.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
+# # Google OAuth
+# GOOGLE_CLIENT_ID=687127819051-iidjd1ihv48nokk5u5it7pvj4p6ehh2g.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET=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
+# GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
