--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
+      - /home/mealbookafl/storage/app/public:/var/www/storage/app/public
     networks:
       - laravel
 
