update nginx config so the image upload can work at server

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,6 @@ server {
     listen 80;
     index index.php index.html;
     server_name felitech.site;
-
     root /var/www/public;
 
     location / {
@@ -14,6 +13,7 @@ server {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
     }
 
     location ~ /\.ht {
