set maximum file to 20 MB

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,8 @@ server {
     server_name felitech.site;
     root /var/www/public;
 
+    client_max_body_size 20M; 
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
