--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: laravel_app
+    container_name: mealbook_app
     restart: unless-stopped
     working_dir: /var/www
     volumes:
@@ -14,7 +14,7 @@ services:
 
   web:
     image: nginx:latest
-    container_name: laravel_web
+    container_name: mealbook_web
     restart: unless-stopped
     expose:
       - "80"
